// Generated by polka.codes

import { afterAll, afterEach, beforeAll, beforeEach, describe, expect, test } from 'bun:test'
import { mkdirSync, mkdtempSync, rmSync, writeFileSync } from 'node:fs'
import { tmpdir } from 'node:os'
import { join } from 'node:path'
import { loadConfig, mergeConfigs } from './config'

describe('config parameters', () => {
  let testDir: string
  let testSubDir: string
  let testHomeDir: string

  beforeAll(() => {
    testDir = mkdtempSync(join(tmpdir(), 'polkacodes-test-'))
  })

  beforeEach(() => {
    testSubDir = mkdtempSync(join(testDir, `sub-test-${Math.random()}`))
    testHomeDir = mkdtempSync(join(testDir, `home-test-${Math.random()}`))
    mkdirSync(join(testHomeDir, '.config', 'polkacodes'), { recursive: true })
  })

  afterEach(() => {
    rmSync(testSubDir, { recursive: true, force: true })
    rmSync(testHomeDir, { recursive: true, force: true })
  })

  afterAll(() => {
    rmSync(testDir, { recursive: true, force: true })
  })

  test('loads root level defaultParameters', async () => {
    const configPath = join(testSubDir, 'params-config.yml')
    writeFileSync(
      configPath,
      `
defaultProvider: anthropic
defaultParameters:
  temperature: 0.7
  top_p: 0.9
  max_tokens: 4000
    `,
    )

    const config = await loadConfig(configPath, testSubDir, testHomeDir)
    expect(config?.defaultParameters).toMatchSnapshot()
  })

  test('loads provider defaultParameters', async () => {
    const configPath = join(testSubDir, 'provider-params-config.yml')
    writeFileSync(
      configPath,
      `
providers:
  anthropic:
    apiKey: test-key
    defaultModel: claude-3-opus
    defaultParameters:
      temperature: 0.5
      max_tokens: 3000
  openai:
    apiKey: test-key-openai
    defaultParameters:
      temperature: 0.8
      presence_penalty: 0.2
    `,
    )

    const config = await loadConfig(configPath, testSubDir, testHomeDir)
    expect(config?.providers?.anthropic?.defaultParameters).toMatchSnapshot()
    expect(config?.providers?.openai?.defaultParameters).toMatchSnapshot()
  })

  test('loads command parameters', async () => {
    const configPath = join(testSubDir, 'command-params-config.yml')
    writeFileSync(
      configPath,
      `
commands:
  default:
    provider: anthropic
    model: claude-3-opus
    parameters:
      temperature: 0.7
      max_tokens: 4000
  task:
    model: claude-3-sonnet
    parameters:
      temperature: 0.8
      top_p: 0.9
    `,
    )

    const config = await loadConfig(configPath, testSubDir, testHomeDir)
    expect(config?.commands?.default?.parameters).toMatchSnapshot()
    expect(config?.commands?.task?.parameters).toMatchSnapshot()
  })

  test('merges parameters from multiple configs', () => {
    const configs = [
      {
        defaultParameters: {
          temperature: 0.7,
          top_p: 0.9,
        },
        providers: {
          anthropic: {
            defaultParameters: {
              temperature: 0.5,
              max_tokens: 2000,
            },
          },
        },
      },
      {
        defaultParameters: {
          max_tokens: 4000,
          presence_penalty: 0.1,
        },
        providers: {
          anthropic: {
            defaultParameters: {
              temperature: 0.6,
              frequency_penalty: 0.2,
            },
          },
        },
      },
    ]

    const merged = mergeConfigs(configs)
    expect(merged.defaultParameters).toMatchSnapshot()
    expect(merged.providers?.anthropic?.defaultParameters).toMatchSnapshot()
  })

  test('merges global and local parameters with local precedence', async () => {
    const globalConfigPath = join(testHomeDir, '.config', 'polkacodes', 'config.yml')
    const localConfigPath = join(testSubDir, '.polkacodes.yml')

    writeFileSync(
      globalConfigPath,
      `
defaultParameters:
  temperature: 0.7
  top_p: 0.9
providers:
  anthropic:
    defaultParameters:
      temperature: 0.5
      max_tokens: 2000
    `,
    )

    writeFileSync(
      localConfigPath,
      `
defaultParameters:
  temperature: 0.6
  presence_penalty: 0.1
providers:
  anthropic:
    defaultParameters:
      temperature: 0.4
      top_k: 50
    `,
    )

    const config = await loadConfig(localConfigPath, testSubDir, testHomeDir)
    expect(config?.defaultParameters).toMatchSnapshot()
    expect(config?.providers?.anthropic?.defaultParameters).toMatchSnapshot()
  })

  describe('mergeConfigs edge cases', () => {
    test('handles empty array', () => {
      const merged = mergeConfigs([])
      expect(merged).toEqual({})
    })

    test('handles single config', () => {
      const config = {
        defaultParameters: { temperature: 0.7 },
      }
      const merged = mergeConfigs([config])
      expect(merged).toEqual(config)
    })

    test('deep merges nested objects', () => {
      const configs = [
        {
          providers: {
            anthropic: {
              apiKey: 'key1',
              defaultParameters: {
                temperature: 0.5,
                max_tokens: 2000,
              },
            },
          },
        },
        {
          providers: {
            anthropic: {
              defaultParameters: {
                temperature: 0.6,
                top_p: 0.9,
              },
            },
          },
        },
      ]

      const merged = mergeConfigs(configs)
      expect(merged.providers?.anthropic).toMatchSnapshot()
      expect(merged.providers?.anthropic?.apiKey).toBe('key1')
      expect(merged.providers?.anthropic?.defaultParameters?.temperature).toBe(0.6)
      expect(merged.providers?.anthropic?.defaultParameters?.max_tokens).toBe(2000)
      expect(merged.providers?.anthropic?.defaultParameters?.top_p).toBe(0.9)
    })

    test('merges arrays with concat', () => {
      const configs = [
        {
          excludeFiles: ['node_modules', '.git'],
        },
        {
          excludeFiles: ['dist', 'build'],
        },
      ]

      const merged = mergeConfigs(configs)
      expect(merged.excludeFiles).toEqual(['node_modules', '.git', 'dist', 'build'])
    })

    test('handles missing arrays', () => {
      const configs = [
        {
          excludeFiles: ['node_modules'],
        },
        {
          defaultParameters: { temperature: 0.7 },
        },
      ]

      const merged = mergeConfigs(configs)
      expect(merged.excludeFiles).toEqual(['node_modules'])
      expect(merged.defaultParameters).toEqual({ temperature: 0.7 })
    })
  })

  describe('loadConfig edge cases', () => {
    test('throws on missing config file', async () => {
      const configPath = join(testSubDir, 'nonexistent.yml')
      await expect(loadConfig(configPath, testSubDir, testHomeDir)).rejects.toThrow()
    })

    test('throws on invalid YAML', async () => {
      const configPath = join(testSubDir, 'invalid.yml')
      writeFileSync(configPath, '{ invalid yaml content')

      await expect(loadConfig(configPath, testSubDir, testHomeDir)).rejects.toThrow()
    })

    test('prioritizes local config over global config', async () => {
      const globalConfigPath = join(testHomeDir, '.config', 'polkacodes', 'config.yml')
      const localConfigPath = join(testSubDir, '.polkacodes.yml')

      writeFileSync(
        globalConfigPath,
        `
defaultProvider: openai
defaultParameters:
  temperature: 0.5
        `,
      )

      writeFileSync(
        localConfigPath,
        `
defaultProvider: anthropic
defaultParameters:
  temperature: 0.7
        `,
      )

      const config = await loadConfig(localConfigPath, testSubDir, testHomeDir)
      expect(config?.defaultProvider).toBe('anthropic')
      expect(config?.defaultParameters?.temperature).toBe(0.7)
    })
  })
})
